# lab_3

./: CMakeLists.txt  main.cpp  release.yml
.github/workflows/: release.yml
